# gtfs-schema

./: .gitignore  Cargo.toml  README.md  dmfr.schema-v0.6.0.json  gtfs_schema.sh
src/: dmfr.rs  download.rs  main.rs  martin.rs  web.rs
