[package]
name = "gtfs-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arguments = "0.7.2"
async-recursion = "1.1.0"
futures = "0.3.30"
gtfs-structures = "0.41.1"
regress = "0.9.0"
reqwest = {version = "0.11", default-features = false, features = ["gzip", "brotli", "rustls-tls", "deflate"]}
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
sqlx = "0.7.3"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"

[[bin]]
name = "download"
path = "src/download.rs"
