[package]
name = "gtfs-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arguments = "0.7.2"
async-recursion = "1.1.0"
futures = "0.3.30"
geojson = "0.24.1"
gtfs-structures = "0.41.1"
regress = "0.10.1"
reqwest = {version = "0.12.1", default-features = false, features = ["cookies", "gzip", "http2", "brotli", "rustls-tls", "deflate"]}
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-serde_json-1"] }

[[bin]]
name = "download"
path = "src/download.rs"

[[bin]]
path = "src/martin.rs"
name = "martin"
