[package]
name = "gtfs-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-postgres = "0.4.0"
actix-web = "4.9.0"
arguments = "0.8"
async-recursion = "1.1.0"
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3.30"
geo = "0.29"
geo-postgis = "0.2.2"
geojson = "0.24.1"
gtfs-structures = "0.42"
postgres-types = { version = "0.2.8", features = ["with-chrono-0_4", "derive"] }
regress = "0.10.1"
reqwest = {version = "0.12.1", default-features = false, features = ["cookies", "gzip", "http2", "brotli", "rustls-tls", "deflate"]}
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-serde_json-1", "with-geo-types-0_7"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
tokio-pg-mapper = { version = "0.2.0", features = ["tokio-pg-mapper-derive"] }
tokio-pg-mapper-derive = "0.2.0"
qstring = "0.7.2"

[[bin]]
name = "download"
path = "src/download.rs"

[[bin]]
path = "src/martin.rs"
name = "martin"

[[bin]]
path = "src/web.rs"
name = "web"
